GNOME Bugzilla – Bug 788826
Can't find libretro cores with firmwares
Last modified: 2017-10-11 20:39:26 UTC
Since today, retro-gtk can't find any libretro core that has a firmware section in its descriptor file. Output when running a PlayStation game: (gnome-games:2): Retro-DEBUG: Error opening directory '/app/lib/retro-1.0/plugins': No such file or directory (gnome-games:2): Retro-DEBUG: /app/lib/libretro/handy.libretro isn't a valid Libretro core descriptor:[Firmware:] mentioned in [Platform:AtariLynx] not found. (gnome-games:2): Retro-DEBUG: /app/lib/libretro/mednafen_pce_fast.libretro isn't a valid Libretro core descriptor:[Firmware:] mentioned in [Platform:TurboGrafxCD] not found. (gnome-games:2): Retro-DEBUG: /app/lib/libretro/mednafen_saturn.libretro isn't a valid Libretro core descriptor:[Firmware:] mentioned in [Platform:SegaSaturn] not found. (gnome-games:2): Retro-DEBUG: /app/lib/libretro/mgba.libretro isn't a valid Libretro core descriptor:[Firmware:] mentioned in [Platform:GameBoyAdvance] not found. (gnome-games:2): Retro-DEBUG: /app/lib/libretro/nestopia.libretro isn't a valid Libretro core descriptor:[Firmware:] mentioned in [Platform:FamicomDiskSystem] not found. (gnome-games:2): Retro-DEBUG: /app/lib/libretro/pcsx_rearmed.libretro isn't a valid Libretro core descriptor:[Firmware:] mentioned in [Platform:PlayStation] not found. (gnome-games:2): Retro-DEBUG: /app/lib/libretro/extra.d/PicoDrive/picodrive.libretro isn't a valid Libretro core descriptor:[Firmware:] mentioned in [Platform:SegaCD] not found. ** (gnome-games:2): DEBUG: retro-runner.vala:131: No module found for platform “PlayStation” and MIME types [ “application/x-cue”, “application/x-playstation-rom” ]. Cores without firmwares (Gambatte, BSNES, DeSmuME, etc) work fine.
Created attachment 361356 [details] [review] core-descriptor: Fix firmware check loop