core-descriptor: Fix firmware check loop

https://bugzilla.gnome.org/show_bug.cgi?id=788826